--- a/index.html
+++ b/index.html
@@ -11,38 +11,22 @@
 	<link rel="apple-touch-icon" href="img/logo_192x192.png" />
 	<link rel="stylesheet" href="global.css">
 
-	<meta name="author" content="MikhaD">
+	<meta name="author" content="dawsnow">
 	<meta name="description"
-		content="Wordle with infinite, hourly and daily modes. Double tap on a word to learn it's definition.">
+		content="Wordle with roguelike elements and increasing word length">
 	<meta name="keywords"
-		content="wordle, infinite wordle, wordle infinite, infinate wordle, infinte wordle, unlimited, daily wordle, wordle+, word game, puzzle, game">
+		content="wordle, roguelike wordle, wordle roguelike, roguedle, roguele, daily wordle, word game, puzzle, game, roguelike">
 
 	<!-- FB Meta Tags -->
-	<meta property="og:url" content="https://mikhad.github.io/wordle/">
+	<meta property="og:url" content="roguedle.com">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Wordle+ | An infinite word guessing game">
-	<meta property="og:description" content="Guess the word in 6 tries. Play daily, hourly and infinite modes.">
-	<meta property="og:image" content="https://mikhad.github.io/wordle/img/og_1200x630.png">
+	<meta property="og:title" content="Roguedle | A Wordle Roguelike">
+	<meta property="og:description" content="Guess the word in 6 tries. Every 2 words, you will get to choose between an artifact and an extra guess. The word length will increase">
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<meta name="google-site-verification" content="nfr4xQiyHWYkamHQq6M7E9kXoXp8tmNihRU0c5yXjlw" />
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-RHN319RJ6V"></script>
-	<script>
-		if (document.location.origin === "https://mikhad.github.io") {
-			// Google Analytics
-			window.dataLayer = window.dataLayer || [];
-			function gtag() { dataLayer.push(arguments); }
-			gtag('js', new Date());
-			gtag('config', 'G-RHN319RJ6V');
-
-			// PWA Service worker
-			if ("serviceWorker" in navigator) navigator.serviceWorker.register("./sw.js");
-		}
-	</script>
 
 	<script type="module" src="/src/main.ts"></script>
 	<!-- changed to something more suited to being the title of a tab in App.svelte. This title is for SEO -->
-	<title>Infinite wordle - Play unlimited wordles | Wordle+</title>
+	<title>Roguedle | A Wordle Roguelike</title>
 </head>
 
 <body>
