--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 	<meta name="theme-color" content="#6aaa64" />
 	<link rel="manifest" href="manifest.json">
-	<link rel="shortcut icon" href="img/logo_32x32.png" type="image/x-icon">
-	<link rel="apple-touch-icon" href="img/logo_192x192.png" />
+	<link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
+	<link rel="apple-touch-icon" href="img/icon.png" />
 	<link rel="stylesheet" href="global.css">
 
 	<meta name="author" content="dawsnow">
